--- a/views/partials/burger-block.handlebars
+++ b/views/partials/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
-	{{burger_name}}
+	{{this.burger_name}}
 
-	<button class="change-eaten" data-id="{{id}}" data-eaten="{{devoured}}">
-		{{#if devoured}}EAT ME!{{else}}YOU ALREADY ATE ME!{{/if}}
+	<button class="change-eaten" data-id="{{this.id}}" data-eaten="{{this.devoured}}">
+		{{#if this.devoured}}YOU ALREADY ATE ME!{{else}}EAT ME!{{/if}}
 	</button>
 </li>
