--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico"/>
 </head>
-<body>
+<body id="background-image">
     {{{ body }}}
     <script src="https://code.jquery.com/jquery-3.3.1.js"
             integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
