--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,8 @@
+* {
+    /* font-family: 'Abril Fatface', cursive; */
+    font-family: 'Limelight', cursive;
+}
+
 #background-image {
     background-image: url('/diner.jpg');
     background-repeat: no-repeat;
@@ -13,16 +18,23 @@ h1, h2, h3 {
     text-shadow: 2px 2px #DBD3D3;
 }
 
-.to-eat, .add-burger, .eaten {
+/* .to-eat, .add-burger, .eaten {
     float: left;
     margin: 25px 35px 5px 45px;
-}
+} */
 
 button {
     background-color: #625959;
     color: white;
     padding: 5px;
     border-radius: 5px;
+    cursor: grabbing;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
 li {
@@ -30,11 +42,12 @@ li {
     margin: 5px;
     background: #EFE6E6;
     border-radius: 5px;
+    font-size: 20px;
+    /* min-height: 15px; */
   }
   
   label {
     padding: 5px;
-    
     background: #EFE6E6;
     border-radius: 5px;
     font-weight: bold;
@@ -50,3 +63,5 @@ li {
   .form-group {
     margin-bottom: 5px;
   }
+
+  
