--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
     <title>Express Burger</title>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Limelight" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+            integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" 
+            crossorigin="anonymous">
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
     <link rel="shortcut icon" href="/assets/favicon/favicon.ico"/>
 </head>
