--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,6 +6,7 @@
 #background-image {
     background-image: url('/diner.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1, h2, h3 {
